final css changes

--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
         <h2>Nutrition</h2>
         <p class="plain-text">The table below shows nutritional values per serving without the additional fillings.</p>
         <ul>
-          <li style="margin: 0px;"><p class="plain-text">Calories</p></li>
-          <li class="data">277kcal</li>
+          <li><span class="plain-text">Calories</span></li>
+          <li><span class="data">277kcal</span></li>
         </ul>
         <hr>
         <ul>
-          <li><p class="plain-text">Carbs</p></li>
-          <li class="data">0g</li>
+          <li><span class="plain-text">Carbs   </span></li>
+          <li><span class="data">0g</span></li>
         </ul>
         <hr>
         <ul>
-          <li><p class="plain-text">Protein</p></li>
-          <li class="data">20g</li>
+          <li><span class="plain-text">Protein </span></li>
+          <li><span class="data">20g</span></li>
         </ul>
         <hr>
         <ul>
-          <li><p class="plain-text">Fat</p></li>
-          <li class="data">22g</li>
+          <li><span class="plain-text">Fat     </span></li>
+          <li><span class="data">22g</span></li>
         </ul>
       </section>
     </div>
